Lattice; Display Type: "Bounds" not working #35694

Closed
opened 2013-06-09 18:42:55 +02:00 by Kevin T · 4 comments

%%%--- Operating System, Graphics card ---
Vista 32-bit

- Blender version with error---

blender-2.66a
blender-2.67-r57299

I dont know about older versions

- Short description of error ---

The display type "bounds" will not work for lattice

- Steps for others to reproduce the error (preferably based on attached .blend file) ---
  1. Add lattice
  2. Go to "Object>Display and change type to "bounds". Nothing will happen

%%%

%%%--- Operating System, Graphics card --- Vista 32-bit - Blender version with error--- blender-2.66a blender-2.67-r57299 I dont know about older versions - Short description of error --- The display type "bounds" will not work for lattice - Steps for others to reproduce the error (preferably based on attached .blend file) --- 1. Add lattice 2. Go to "Object>Display and change type to "bounds". Nothing will happen %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%fixed r57324. (this was a duplicate of another report)%%%

%%%fixed r57324. (this was a duplicate of another report)%%%

%%%ok, was in fact not quite a duplicate, fixed r57456.%%%

%%%ok, was in fact not quite a duplicate, fixed r57456.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35694
No description provided.