fix [#35694] Lattice; Display Type: "Bounds" not working